# raceboat

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-pt.sh  build.sh  build_it_all.sh  create-package.sh  test.sh
android/: .gitignore  settings.gradle.kts
app/race-cli/: CMakeLists.txt  main.cpp
docker-image/: Dockerfile  README.md
documentation/: DecomposedDeveloperGuide.md
language-shims/: CMakeLists.txt  README.md
language-shims/golang/: CMakeLists.txt  corePluginBindings.golang.i  init_go.cmake
language-shims/python/: CMakeLists.txt
language-shims/source/: CMakeLists.txt  commsPluginBindings.golang.i  commsPluginBindings.i  corePluginBindings.golang.i  init_go.cmake
language-shims/tests/python/: CMakeLists.txt  CommsPluginTest.cpp  PyDecomposeTest.cpp  main.cpp
language-shims/tests/python/stubs/NetworkManagerStub/: NetworkManagerStub.py
pluggable-transport/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  example_config.ini
pluggable-transport/source/: CMakeLists.txt
pluggable-transport/source/cmd/race-dispatcher/: CMakeLists.txt  Dispatcher.go  go.mod.in  go.sum  pt_extras.go
pluggable-transport/source/pkg/goptlib/: CMakeLists.txt  go.mod  go.mod.in  pt.go  pt_test.go  socks.go
pluggable-transport/source/pkg/goptlib/examples/dummy-client/: dummy-client.go
pluggable-transport/source/pkg/goptlib/examples/dummy-server/: dummy-server.go
pluggable-transport/source/pkg/race_pt3/: CMakeLists.txt  go.mod.in  go.sum  race_pt3.go
pluggable-transport/source/tests/: CMakeLists.txt  go.mod.in  go.sum  tests.go
pluggable-transport/source/tests/configs/sdk/: race.json  user-input-response-cache.json
pluggable-transport/source/tests/etc/: jaeger-config.yml  user-responses.json
pluggable-transport/source/tests/etc2/: user-responses.json
race-cmake-modules/: .gitignore
raceboat-builder-image/: Dockerfile  android-arm64-v8a.toolchain.cmake  android-x86_64.toolchain.cmake  build_image.sh
raceboat-compile-image/: Dockerfile  build_image.sh
raceboat-plugin-builder-image/: Dockerfile  build_image.sh
raceboat-repackaging/: Dockerfile  build-python3.12-portable.sh  create-package-AppImage.sh  create-package.sh  (+3 more)
source/: CMakeLists.txt  Composition.cpp  Composition.h  Core.cpp  Core.h  FileSystem.cpp  FileSystem.h  Handler.cpp  Handler.h  PluginContainer.cpp  PluginContainer.h  PluginDef.cpp  PluginDef.h  PluginWrapper.cpp  PluginWrapper.h  Race.cpp  SdkWrapper.cpp  SdkWrapper.h  Storage.cpp  Storage.h  UserInput.cpp  UserInput.h  base64.cpp  base64.h  helper.cpp  helper.h
source/api-managers/: ApiManager.cpp  ApiManager.h  ChannelManager.cpp  ChannelManager.h
source/common/: ChannelProperties.cpp  ChannelRole.cpp  ChannelStatus.cpp  ConnectionStatus.cpp  ConnectionType.cpp  EncPkg.cpp  LinkProperties.cpp  LinkPropertyPair.cpp  LinkPropertySet.cpp  LinkStatus.cpp  LinkType.cpp  PackageStatus.cpp  PackageType.cpp  PluginResponse.cpp  RaceEnums.cpp  RaceLog.cpp  SendType.cpp  TransmissionType.cpp
source/decomposed/: ComponentActionManager.cpp  ComponentActionManager.h  ComponentConnectionManager.cpp  ComponentConnectionManager.h  ComponentLifetimeManager.cpp  ComponentLifetimeManager.h  ComponentLinkManager.cpp  ComponentLinkManager.h  ComponentManager.cpp  ComponentManager.h  ComponentManagerTypes.cpp  ComponentManagerTypes.h  ComponentPackageManager.cpp  ComponentPackageManager.h  ComponentReceivePackageManager.cpp  ComponentReceivePackageManager.h  ComponentTypes.cpp  ComponentWrappers.cpp  ComponentWrappers.h  MimeTypes.cpp  MimeTypes.h  SdkWrappers.cpp  SdkWrappers.h
source/plugin-loading/: ComponentPlugin.cpp  ComponentPlugin.h  CompositeWrapper.cpp  CompositeWrapper.h  Config.cpp  Config.h  DecomposedPluginLoader.cpp  DecomposedPluginLoader.h  DynamicLibrary.cpp  DynamicLibrary.h  IComponentPlugin.h  LoaderWrapper.cpp  LoaderWrapper.h  PluginLoader.cpp  PluginLoader.h  PythonComponentPlugin.cpp  PythonComponentPlugin.h  PythonHelper.cpp  PythonHelper.h  PythonLoaderWrapper.cpp  PythonLoaderWrapper.h
source/state-machine/: ApiContext.cpp  ApiContext.h  BootstrapDialStateMachine.cpp  BootstrapDialStateMachine.h  BootstrapListenStateMachine.cpp  BootstrapListenStateMachine.h  BootstrapPreConduitStateMachine.cpp  BootstrapPreConduitStateMachine.h  BootstrapPreConnObjStateMachine.cpp  BootstrapPreConnObjStateMachine.h  ConduitStateMachine.cpp  ConduitStateMachine.h  ConnectionObjectStateMachine.cpp  ConnectionObjectStateMachine.h  ConnectionStateMachine.cpp  ConnectionStateMachine.h  DialStateMachine.cpp  DialStateMachine.h  Events.cpp  Events.h  ListenStateMachine.cpp  ListenStateMachine.h  PreConduitStateMachine.cpp  PreConduitStateMachine.h  PreConnObjStateMachine.cpp  PreConnObjStateMachine.h  ReceiveStateMachine.cpp  ReceiveStateMachine.h  ResumeStateMachine.cpp  ResumeStateMachine.h  SendReceiveStateMachine.cpp  SendReceiveStateMachine.h  SendStateMachine.cpp  SendStateMachine.h  StateMachine.cpp  StateMachine.h  States.h
source/unified/: RacePluginRegistry.cpp  SdkResponse.cpp
test/common/UnifiedTestStub/: CMakeLists.txt  UnifiedTestStub.cpp  UnifiedTestStub.h  manifest.json
test/common/plugins/DecomposedTestImplementation/: CMakeLists.txt  DecomposedTestEncoding.cpp  DecomposedTestTransport.cpp  DecomposedTestUserModel.cpp  manifest.json
test/source/: CMakeLists.txt  ComponentActionManagerTest.cpp  ComponentLifetimeManagerTest.cpp  ComponentManagerTest.cpp  ComponentPackageManagerTest.cpp  ComponentReceivePackageManagerTest.cpp  ConfigTest.cpp  CoreTest.cpp  ExternalApiTest.cpp  FileSystemTest.cpp  HandlerTest.cpp  IntegrationTest.cpp  PluginLoadingTest.cpp  PluginWrapperTest.cpp  RaceLogTests.cpp  SdkWrapperTest.cpp  StateMachineTest.cpp  UnidirectionalStateMachineTest.cpp  UserInputTest.cpp  main.cpp
test/source/ApiManager/: BootstrapListenTest.cpp  DialTest.cpp  ListenTest.cpp  ReceiveRespondTest.cpp  RecvTest.cpp  SendReceiveTest.cpp  SendTest.cpp
test/source/headers/: ChannelRoleTest.cpp  LinkPropertiesTest.cpp  LinkPropertyPairTest.cpp  LinkPropertySetTest.cpp
(+252 files in other folders)
